--- a/BookShop/BookShop.csproj
+++ b/BookShop/BookShop.csproj
@@ -314,6 +314,7 @@
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\CheckOutProcess.cs" />
     <Compile Include="Models\CreditCard.cs" />
+    <Compile Include="Models\Promotion.cs" />
     <Compile Include="Models\Result.cs" />
     <Compile Include="Models\Transaction.cs" />
     <Compile Include="Models\TransactionDetail.cs" />
